<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="test">THPremium</string>

    <string name="FONT_FIRA_SANS_BOLD">fonts/FiraSans-Bold.ttf</string>
    <string name="FONT_FIRA_SANS_REGULAR">fonts/FiraSans-Regular.ttf</string>
    <string name="FONT_TUNDRA_OFFC">fonts/TundraOffc.ttf</string>
    <string name="FONT_TUNDRA_OFFC_BOLD">fonts/TundraScOffc-Bold.ttf</string>


    <string name="THP_FiraSans_Bold">fonts/THP_FiraSans-Bold.ttf</string>
    <string name="THP_FiraSans_Regular">fonts/THP_FiraSans-Regular.ttf</string>
    <string name="THP_FiraSans_SemiBold">fonts/THP_FiraSans-SemiBold.ttf</string>
    <string name="THP_TundraOffc">fonts/THP_TundraOffc.ttf</string>
    <string name="THP_TundraOffc_Bold">fonts/THP_TundraOffc-Bold.ttf</string>
    <string name="THP_TundraOffc_BoldItalic">fonts/THP_TundraOffc-BoldItalic.ttf</string>
    <string name="THP_TundraOffc_Italic">fonts/THP_TundraOffc-Italic.ttf</string>

    <string name="Rs">\u20B9</string>
    <string name="hint_registered_mobile_number"><font size="30">My hint string</font></string>

    <string name="type_device">Default Device</string>
    <string name="title_activity_maps">Map</string>

    <string name="please_check_ur_connectivity">Please check your internet connectivity.</string>
    <string name="connectivity_try_again">Please check your internet connectivity.\n Try Again</string>
    <string name="failed_to_connect">Failed to connect</string>
    <string name="try_again">We could not load the data.\n Tap to retry</string>

    <string name="article_not_loaded">Clicked link\'s article is not loaded.\nPlease check your internet connectivity.</string>
    <string name="please_wait">Please wait...</string>
    <string name="kindly">Kindly!</string>
    <string name="alert">Alert!</string>
    <string name="passwd_length_err_msg">Password length must be greater than 5.</string>
    <string name="passwd_char_err_msg">Password should contain atleast 1 number and 1 alphabet. No special characters.</string>
    <string name="all_field_mandatory">All fields are mandatory.</string>

    <string name="comments">COMMENTS</string>

    <string name="language_not_available">Language is not available.</string>
    <string name="language_missing_data">Language is not downloaded. Please download from Google TTS voice data.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="select_preference">Please select preference.</string>

    <string name="api_create_subscription_failure_message">We are unable to confirm your payment due to some technical issues. Please wait for 30 minutes for the confirmation.</string>
    <string name="api_create_subscription_failure_title">Payment Failure</string>
    <string name="api_create_subscription_success_message">Purchase was successful. Enjoy!</string>
    <string name="api_create_subscription_success_title">Payment confirmed</string>

    <!-- For Facebook Login-->
    <string name="facebook_app_id">429571521229925</string>
    <string name="fb_login_protocol_scheme">fb429571521229925</string>

    <!-- For twitter Login-->
    <!--<string name="com.twitter.sdk.android.CONSUMER_KEY" tools:ignore="ExtraTranslation">R4aG29tZVOgu3t8bIA2t7T9by</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" tools:ignore="ExtraTranslation">1YIayOnN05m8dPdYHV87n5luuZOl7aVJbYjo6h8guDFXISZNOH</string>-->


    <string name="no_geocoder_available">No geocoder available</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>


    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed to get current location.</string>
    <string name="location_not_enabled">It seems your location service is disabled. Please enable from your device settings.</string>
    <string name="settings">Settings</string>

</resources>
