<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/backBtn"
        style="@style/backBtnStyle"
        android:layout_marginStart="@dimen/baseLayoutLeftPadding"
        android:layout_marginLeft="@dimen/baseLayoutLeftPadding"
        android:layout_marginTop="@dimen/baseLayoutTopPadding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Start Part 1 Layout-->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/part1Layout"
        style="@style/parentLayoutPaddingStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/userprofile_gap_for_1"
        android:layout_marginLeft="@dimen/userprofile_gap_for_1"
        android:layout_marginEnd="@dimen/userprofile_gap_for_1"
        android:layout_marginRight="@dimen/userprofile_gap_for_1"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.ns.view.CustomTextView
                android:id="@+id/userName_Txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxEms="11"
                android:text="Change Password"
                android:textColor="@color/boldBlackColor"
                android:textSize="18sp"
                app:font_path="@string/FONT_FIRA_SANS_BOLD" />

            <com.ns.view.CustomTextView
                android:id="@+id/mobileNumber_Txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.6"
                android:text="Minimum 5 characters with atleast 1 number and 1 alphabet. No special characters"
                android:textColor="@color/boldBlackColor"
                android:textSize="14sp"
                app:font_path="@string/FONT_FIRA_SANS_REGULAR" />
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>
    <!--End Part 1 Layout-->

    <!--Start Part 2 Layout-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/part2Layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/userprofile_gap_for_2"
            android:layout_marginLeft="@dimen/userprofile_gap_for_2"
            android:layout_marginEnd="@dimen/userprofile_gap_for_2"
            android:layout_marginRight="@dimen/userprofile_gap_for_2"
            app:layout_constraintTop_toBottomOf="@+id/part1Layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="50dp"
            android:fillViewport="true"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/currentPasswordLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Current Password"
                android:theme="@style/TextLabel"
                app:hintTextAppearance="@style/HintLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/currentPasswordET"
                    style="@style/addAddressET_Style"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    app:hintTextAppearance="@style/HintLabel" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/newPasswordLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_address_info_et_gap"
                android:hint="New Password"
                android:theme="@style/TextLabel"
                app:hintTextAppearance="@style/HintLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currentPasswordLayout"

                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/newPasswordET"
                    style="@style/addAddressET_Style"
                    android:inputType="textPersonName"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:paddingBottom="15dp"
                    app:hintTextAppearance="@style/HintLabel" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirmPasswordLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_address_info_et_gap"
                android:hint="Confirm Password"
                android:theme="@style/TextLabel"
                app:hintTextAppearance="@style/HintLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newPasswordLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirmPasswordET"
                    style="@style/addAddressET_Style"
                    android:inputType="textPersonName"
                    android:maxLength="10"
                    android:maxLines="1"
                    app:hintTextAppearance="@style/HintLabel" />
            </android.support.design.widget.TextInputLayout>


        </android.support.constraint.ConstraintLayout>
    <!--End Part 2 Layout-->


    <!--Start Part 3 Layout-->
    <FrameLayout
        android:id="@+id/part4Layout"
        android:layout_width="0dp"
        android:layout_height="@dimen/account_info_update_btn_parent_height"
        android:layout_marginTop="20dp"
        android:paddingStart="@dimen/choose_plan_top_padding"
        android:paddingLeft="@dimen/choose_plan_top_padding"
        android:paddingEnd="@dimen/choose_plan_top_padding"
        android:paddingRight="@dimen/choose_plan_top_padding"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/part2Layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.ns.view.CustomTextView
            android:id="@+id/updatePasswordBtn_Txt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/blue_backgraoud"
            android:gravity="center"
            android:text="Update Password"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:font_path="@string/FONT_TUNDRA_OFFC_BOLD" />


    </FrameLayout>
    <!--End Part 3 Layout-->

    <com.ns.view.CustomProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        />


</android.support.constraint.ConstraintLayout>